# MatrixSolver-Milestone_2

./: All Matrices Together  CMakeLists.txt  README.md  StringUtils.h  gitlog.txt  log.txt  main.cpp
AlgoritmsTesting/: NodesEvaluatedTester.cpp  NodesEvaluatedTester.h
ClientHandler/: AbstractCacheManager.h  CacheManager.h  ClientHandler.h  FileCacheManager.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Solver.h  StringReverser.h
Searchables/: MatrixMaze.h  Searchable.h  State.cpp  State.h
Searchers/: AbstractQueueSearchers.cpp  AbstractQueueSearchers.h  AbstractSearcher.cpp  AbstractSearcher.h  Astar.cpp  Astar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CustomPriorityQueue.h  DepthFirstSearch.cpp  DepthFirstSearch.h  Searcher.h
Server/: MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h  TCPServer.cpp  TCPServer.h  boot.cpp  boot.h
Solvers/: MatrixSolver.cpp  MatrixSolver.h  Solver.h  StringReverser.h
